# fsm-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
src/: action.rs  error.rs  errors.rs  event.rs  fsm.rs  lib.rs
