[package]
name = "scc"
version = "0.1.0"
edition = "2021"
authors = ["JimChen <imjimchen@163.com>"]
license = "MIT"
organization = "lovelysunlight"

description = "Finite State Machine for Rust"
keywords = ["finite-state-machine", "fsm", "state-machine", "state", "machine"]

# documentation = "https://docs.rs/fsm"
homepage = "https://github.com/lovelysunlight/fsm-rs"
repository = "https://github.com/lovelysunlight/fsm-rs"
readme = "./README.md"

[features]
default = []

[dependencies]
thiserror = "1.0"

[dev-dependencies]
strum = { version = "0.26", features = ["derive"] }
